Fix moving arrow overflow

--- a/client/src/sass/_sidebar-and-main-panel.scss
+++ b/client/src/sass/_sidebar-and-main-panel.scss
@@ -47,7 +47,7 @@
     position: absolute;
   }
   &:not(:hover) {
-    .logotype, li a p {
+    .logotype, li a p, .moving-arrow {
       display: none;
     }
     .nav li a {
